--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 services: 
     scrapy:
         container_name: scrapy
-        image: nitaydockerhub/scrapy:0.1
+        build: .
+        # image: nitaydockerhub/scrapy:0.1
         volumes: 
             - ./:/app/
         working_dir: /app/teams
